--- a/index.html
+++ b/index.html
@@ -24,18 +24,18 @@
       <div class="d-flex gap-2">
         <div>
           <label class="form-label">First name</label>
-          <input class="form-control" id="first-name-input" />
+          <input class="form-control" id="first-name-input" placeholder="อธิป"/>
           <div class="invalid-feedback">Invalid first name</div>
         </div>
         <div>
           <label class="form-label">Last name</label>
-          <input class="form-control" id="last-name-input" />
+          <input class="form-control" id="last-name-input" placeholder="พูลเขตวิทย์"/>
           <div class="invalid-feedback">Invalid last name</div>
         </div>
       </div>
       <div>
         <label class="form-label">Email</label>
-        <input class="form-control" id="email-input" />
+        <input class="form-control" id="email-input" placeholder="660610805"/>
         <div class="invalid-feedback">Invalid email format</div>
       </div>
       <div>
@@ -48,7 +48,7 @@
         <input
           class="form-control"
           type="password"
-          id="password-confirm-input"
+          id="confirm-password-input"
         />
         <div class="invalid-feedback">
           Password mismatch or invalid password
@@ -57,6 +57,7 @@
 
       <div class="d-flex justify-content-end gap-2">
         <button id="submit-btn" class="btn btn-success my-2">Register</button>
+        <button id="reset-btn" class="btn btn-danger my-2">Reset</button>
       </div>
     </div>
   </body>
